--- a/css.css
+++ b/css.css
@@ -3,7 +3,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	background: #7a2122 url('../images/body_bg.gif') repeat-x top;
+	background: #9fc034 url('../images/body_bg.gif') repeat-x top;
 	font-family: Helvetica, sans-serif;
 	font-size: 62.5%;
 	color: #333;
